Fixed intro background size on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,7 +21,18 @@ p {
 	top: 0;
 	left: 0;
 	z-index: -1;
-	background-color: gray;
+}
+
+/* Shadow so text can be seen */
+
+#introBg::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.2);
 }
 
 .smoothScroll {
@@ -638,6 +649,32 @@ body {
 	.half * {
 		width: 100% !important;
 		padding: 0 !important;
+	}
+
+	p {
+		line-height: 1.75;
+	}
+
+	#one p {
+		padding-bottom: 2rem;
+	}
+
+	#intro {
+		height: 100vh;
+	}
+
+	#introBg * {
+		height: 100vh;
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: -1;
+	}
+
+	#navPanelToggle {
+		background-color: rgba(255, 255, 255, 0.875);
+		box-shadow: 0 0.125rem 0.75rem 0 rgba(30, 37, 45, 0.25);
+		color: #212931;
 	}
 }
 
